Fix bug where individual project page text was offscreen on mobile

--- a/server/public/styles/project.css
+++ b/server/public/styles/project.css
@@ -68,3 +68,12 @@
   background-position: center;
   background-size: cover;
 }
+
+
+/* 800px */
+@media (max-width: 800px) {
+  .singleProject__noVideoWrapper {
+    flex-direction: column;
+    width: 100%;
+  }
+}
